<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/fragment_add_contact_title"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_add_contact_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add_contacts"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_add_contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/contact_name"/>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_add_contact_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_add_contact_name"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_add_contact_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/contact_phone_number"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_add_contact_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_add_contact_phone"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp">
        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/et_add_contact_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/contact_email"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_add_contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_add_contact_email"
        android:layout_margin="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>